# modorganizer

./: CMakeLists.txt  CMakePresets.json  dump_running_process.sh  generate_core.sh  readme.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
src/: CMakeLists.txt  aboutdialog.cpp  activatemodsdialog.cpp  apiuseraccount.cpp  apiuseraccount.h  archivefiletree.cpp  archivefiletree.h  bbcode.cpp  browserdialog.cpp  browserview.cpp  categories.cpp  categories.h  categoriesdialog.cpp  categoriestable.cpp  categoryimportdialog.h  colortable.cpp  commandline.cpp  commandline.h  copyeventfilter.cpp  createinstancedialog.cpp  createinstancedialog.h  createinstancedialogpages.cpp  createinstancedialogpages.h  csvbuilder.cpp  datatab.cpp  datatab.h  directoryrefresher.cpp  disableproxyplugindialog.cpp  downloadlist.cpp  downloadlistview.cpp  downloadmanager.cpp  downloadmanager.h  downloadmanagerproxy.cpp  downloadmanagerproxy.h  downloadstab.cpp  downloadstab.h  editexecutablesdialog.cpp  editexecutablesdialog.h  env.cpp  env.h  (+167 more)
src/linux/: commandline_linux.cpp  compatibility.h  createinstancedialog.ui  createinstancedialogpages_linux.cpp  editexecutablesdialog.ui  editexecutablesdialog_linux.cpp  env_linux.cpp  envfs.cpp  envmodule.cpp  envmodule.h  envmodule_linux.cpp  envmodule_linux.h  envos_linux.cpp  envprocess_linux.cpp  envsecurity.cpp  envshortcut_linux.cpp  executableslist_linux.cpp  filetree_linux.cpp  filetreeitem_linux.cpp  iconfetcher_linux.cpp  instancemanager_linux.cpp  instancemanagerdialog.ui  instancemanagerdialog_linux.cpp  loot.cpp  loot.h  loot_linux.cpp  loot_linux.h  main.cpp  moapplication_linux.cpp  multiprocess_linux.cpp  overlayfsconnector.cpp  overlayfsconnector.h  pluginlist_linux.cpp  processrunner.cpp  processrunner_linux.cpp  profile_linux.cpp  sanitychecks_linux.cpp  settings_linux.cpp  settingsutilities_linux.cpp  settingsutilities_linux.h  (+6 more)
src/resources/linux/: ModOrganizer.desktop  ModOrganizer.metainfo.xml  io.github.kaedras.ModOrganizer.desktop  io.github.kaedras.ModOrganizer.metainfo.xml  org.modorganizer2.ModOrganizer.desktop  org.modorganizer2.ModOrganizer.metainfo.xml
src/shared/: appconfig.h  appconfig.inc  directoryentry.cpp  directoryentry.h  fileentry.cpp  fileentry.h  fileregister.cpp  fileregister.h  fileregisterfwd.h  filesorigin.cpp  filesorigin.h  nativeString.h  originconnection.cpp  originconnection.h  os_error.h  shared.pro  util.cpp  util.h
src/shared/linux/: os_error.cpp  util_linux.cpp
src/shared/win32/: os_error.cpp  util_win32.cpp  util_win32.h
src/win32/: commandline_win32.cpp  editexecutablesdialog.ui  env_win32.cpp  env_win32.h  envfs.cpp  envfs_win32.cpp  envmodule.cpp  envmodule.h  envmodule_win32.cpp  envmodule_win32.h  envos_win32.cpp  envprocess_win32.cpp  envsecurity.cpp  envshell.h  envshortcut_win32.cpp  executableslist_win32.cpp  filetree_win32.cpp  filetreeitem_win32.cpp  iconfetcher_win32.cpp  instancemanager_win32.cpp  loot.h  loot_win32.cpp  main.cpp  moapplication_win32.cpp  multiprocess_win32.cpp  pluginlist_win32.cpp  processrunner_win32.cpp  profile_win32.cpp  sanitychecks_win32.cpp  settings_win32.cpp  settingsutilities_win32.cpp  settingsutilities_win32.h  spawn_win32.cpp  usvfsconnector.cpp  usvfsconnector.h
